# s1t-litestar-notification-system

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: architecture.md  deployment.md  extending.md
src/core/: config.py  provider.py
src/core/app/: __init__.py  errors.py
src/core/app/interfaces/: i_event_log_repo.py  i_notification_gateway.py  i_settings_repo.py
src/core/app/queries/: dashboard_queries.py  source_overview_queries.py  source_queries.py
src/core/app/use_cases/: check_timeouts_uc.py  global_settings_uc.py  manage_source_uc.py  process_event_uc.py  tick_health_uc.py
src/core/domain/: __init__.py  ents.py  errors.py  event_log_agg.py  events.py  vos.py
src/core/ports/driven/: notification_acl.py
src/core/ports/driving/: schemas.py  source_ui_facade.py
src/notifications/: config.py  provider.py
src/notifications/app/: __init__.py
src/notifications/app/interfaces/: i_config_repo.py  i_subscriber_repo.py  i_telegram_gateway.py
src/notifications/app/queries/: subscriber_queries.py
src/notifications/app/use_cases/: admin_uc.py  alerts_uc.py  subscribers_uc.py
src/notifications/domain/: __init__.py  config_agg.py  errors.py  generator.py  subscriber_ent.py
src/notifications/ports/driving/: alerts_facade.py  (+1 more)
src/root/: container.py  main.py
src/root/entrypoints/: api.py  telegram.py  worker.py
src/shared/: config.py  logger.py  provider.py
src/shared/generics/: __init__.py  enums.py  errors.py
src/shared/templates/: admin.html  base.html  dashboard.html  source_details.html
(+21 files in other folders)
