[project]
name = "s1t-litestar-notification-system"
version = "0.1.0"
description = "S-DDD template: Litestar + Telegram notifications with pluggable event detector"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litestar[jinja,standard]>=2.12.0",
    "uvicorn>=0.30.0",
    "dishka>=1.3.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "aiogram>=3.26.0",
]

[project.scripts]
notification-system = "root.main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/root", "src/shared", "src/core", "src/notifications"]
